with_ingress/svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodeapp
    env: canary
  name: nodeapp-svc-canary
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3333
  selector:
    app: nodeapp
    env: canary
status:
  loadBalancer: {}
