with_ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodeapp
    env: prod
  name: nodeapp-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3333
  selector:
    app: nodeapp
    env: prod
