with_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: nodeapp-svc
      port:
        number: 80
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-svc
            port:
              number: 80
      - path: /canary
        pathType: Prefix
        backend:
          service:
            name: nodeapp-svc-canary
            port:
              number: 80
